refactor:reservation 중복검사 DB기반으로 변경